# panelpack

./: LICENSE  README.md  pyproject.toml
.claude/skills/panelpack/: SKILL.md
panelpack/: __init__.py  __main__.py  cli.py
